<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Direction Finder</string>
    <string name="color">Choose Color</string>
    <string name="enter">Enter</string>
    <string name="edit_message">Enter Label Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="label_name">Enter New Label</string>
    <string name="button1">Pasta</string>
    <string name="button2">Burgers</string>
    <string name="button3">Pancakes</string>
    <string name="other">Other</string>
    <string name="title_activity_new_label">NewLabel</string>
    <string name="getTags">Get Tags!</string>
    <string name="title_activity_compass">Compass</string>
    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <string name="Set">Set Bearing</string>

</resources>