<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinderActivity" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button03"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

    </ListView>
    
    <Button
        android:id="@+id/Button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Button02"
        android:onClick="pressOther"
        android:text="@string/other" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_above="@+id/Button05"
        android:layout_centerHorizontal="true"
        android:onClick="pressButton2"
        android:text="@string/button2" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button03"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="pressGetTags"
        android:text="@string/getTags" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_above="@+id/Button04"
        android:layout_alignParentLeft="true"
        android:onClick="pressButton1"
        android:text="@string/button1" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_above="@+id/Button04"
        android:layout_alignParentRight="true"
        android:onClick="pressButton3"
        android:text="@string/button3" />

</RelativeLayout>